Update to Java 24 (JEP 454)